--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -113,16 +113,16 @@
                             function (data) {
                                 $("#name").val("");
                                 $("#photo").val("");
-                                $("#q1 option:selected");
-                                $("#q2 option:selected");
-                                $("#q3 option:selected");
-                                $("#q4 option:selected");
-                                $("#q5 option:selected");
-                                $("#q6 option:selected");
-                                $("#q7 option:selected");
-                                $("#q8 option:selected");
-                                $("#q9 option:selected");
-                                $("#q10 option:selected");
+                                $("#q1 option:answer");
+                                $("#q2 option:answer");
+                                $("#q3 option:answer");
+                                $("#q4 option:answer");
+                                $("#q5 option:answer");
+                                $("#q6 option:answer");
+                                $("#q7 option:answer");
+                                $("#q8 option:answer");
+                                $("#q9 option:answer");
+                                $("#q10 option:answer");
                             });
                     }
                 });
