--- a/app/public/home.html
+++ b/app/public/home.html
@@ -16,7 +16,7 @@
         </li>
 		<br>
 		<div class="survey">
-			<a href="/survey"><button class="btn btn-lg btn-success">Take this survey!</button></a>
+			<a href="/survey.html"><button class="btn btn-lg btn-success">Take this survey!</button></a>
 		</div>
 	</div>
 
