--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -41,8 +41,6 @@
                 </select>
                 <br>
 
-
-
                 <p><strong>2.) Do you make friends easily?</strong>
                 </p>
                 <select class="choice" id="q2" placeholder="choice">
@@ -54,7 +52,75 @@
                 </select>
                 <br>
 
+                <p><strong>3.) Do you believe mountains are better then oceans?</strong></p>
+                <select class="choice" id="q3" placeholder="choice">
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
+                </select>
+                <br>
 
+                <p><strong>3.) Do you believe mountains are better then oceans?</strong></p>
+                <select class="choice" id="q3" placeholder="choice">
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
+                </select>
+                <br>
+
+                <p><strong>3.) Do you believe mountains are better then oceans?</strong></p>
+                <select class="choice" id="q3" placeholder="choice">
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
+                </select>
+                <br>
+
+                <p><strong>3.) Do you believe mountains are better then oceans?</strong></p>
+                <select class="choice" id="q3" placeholder="choice">
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
+                </select>
+                <br>
+
+                <p><strong>3.) Do you believe mountains are better then oceans?</strong></p>
+                <select class="choice" id="q3" placeholder="choice">
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
+                </select>
+                <br>
+
+                <p><strong>3.) Do you believe mountains are better then oceans?</strong></p>
+                <select class="choice" id="q3" placeholder="choice">
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
+                </select>
+                <br>
+
+                <p><strong>3.) Do you believe mountains are better then oceans?</strong></p>
+                <select class="choice" id="q3" placeholder="choice">
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
+                </select>
+                <br>
 
                 <p><strong>3.) Do you believe mountains are better then oceans?</strong></p>
                 <select class="choice" id="q3" placeholder="choice">
