--- a/app/public/home.html
+++ b/app/public/home.html
@@ -8,7 +8,7 @@
 </head>
 <body class="site">
     <br>
-	<div class="container content">
+	<div class="container content" id="img-background">
         <h1>Find your friend match!</h1>
         <br>
 		<li>
@@ -16,7 +16,7 @@
         </li>
 		<br>
 		<div class="survey">
-			<a href="/survey.html"><button class="btn btn-lg btn-success">Take this survey!</button></a>
+			<a href="survey.html"><button class="btn btn-lg btn-success">Take this survey!</button></a>
 		</div>
 	</div>
 
