--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -52,7 +52,7 @@
                 </select>
                 <br>
 
-                <p><strong>3.) Do you believe mountains are better then oceans?</strong></p>
+                <p><strong>3.) You are very outgoing.</strong></p>
                 <select class="choice" id="q3" placeholder="choice">
                     <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
@@ -62,8 +62,8 @@
                 </select>
                 <br>
 
-                <p><strong>3.) Do you believe mountains are better then oceans?</strong></p>
-                <select class="choice" id="q3" placeholder="choice">
+                <p><strong>4.) You are very conservative.</strong></p>
+                <select class="choice" id="q4" placeholder="choice">
                     <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -72,8 +72,8 @@
                 </select>
                 <br>
 
-                <p><strong>3.) Do you believe mountains are better then oceans?</strong></p>
-                <select class="choice" id="q3" placeholder="choice">
+                <p><strong>5.) You love socializing.</strong></p>
+                <select class="choice" id="q5" placeholder="choice">
                     <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -82,8 +82,8 @@
                 </select>
                 <br>
 
-                <p><strong>3.) Do you believe mountains are better then oceans?</strong></p>
-                <select class="choice" id="q3" placeholder="choice">
+                <p><strong>6.) Being around family is important. </strong></p>
+                <select class="choice" id="q6" placeholder="choice">
                     <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -92,8 +92,8 @@
                 </select>
                 <br>
 
-                <p><strong>3.) Do you believe mountains are better then oceans?</strong></p>
-                <select class="choice" id="q3" placeholder="choice">
+                <p><strong>7.) You believe that the opposite sex has equal rights</strong></p>
+                <select class="choice" id="q7" placeholder="choice">
                     <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -102,8 +102,8 @@
                 </select>
                 <br>
 
-                <p><strong>3.) Do you believe mountains are better then oceans?</strong></p>
-                <select class="choice" id="q3" placeholder="choice">
+                <p><strong>8.) Would you live in the countryside?</strong></p>
+                <select class="choice" id="q8" placeholder="choice">
                     <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -112,8 +112,8 @@
                 </select>
                 <br>
 
-                <p><strong>3.) Do you believe mountains are better then oceans?</strong></p>
-                <select class="choice" id="q3" placeholder="choice">
+                <p><strong>9.) Do you like to party.</strong></p>
+                <select class="choice" id="q9" placeholder="choice">
                     <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -122,8 +122,8 @@
                 </select>
                 <br>
 
-                <p><strong>3.) Do you believe mountains are better then oceans?</strong></p>
-                <select class="choice" id="q3" placeholder="choice">
+                <p><strong>10.) You can be shy at times. </strong></p>
+                <select class="choice" id="q10" placeholder="choice">
                     <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
